--- a/Onlineexam/.project
+++ b/Onlineexam/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Onlineexam</name>
+	<name>integration</name>
 	<comment></comment>
 	<projects>
 	</projects>
